--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "static-site",
   "version": "1.0.0",
-  "description": "",
+  "description": "Creates a good README.md from user inputs.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Mason McGinley",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.3.1"
